--- a/less/misc.less
+++ b/less/misc.less
@@ -20,6 +20,9 @@
 // Components
 // ==========================================================
 
+.atk-wrapper {
+
+}
 .atk-text-nowrap {
     white-space: nowrap;
 }
@@ -281,6 +284,11 @@ input[type=submit] {
             margin-left: @margin;
             margin-right: @margin;
             white-space: nowrap;
+        }
+        .atk-logo {
+            display: inline-block;
+            margin-top: 0.5em;
+            margin-bottom: 0.5em;
         }
         .atk-media-block .atk-content {
             padding-left: @margin/3;
