--- a/less/variables.less
+++ b/less/variables.less
@@ -31,7 +31,7 @@
 @swatch1:              #bf1313;
 @swatch2:              #14cc76;
 @swatch3:              #0a6666;
-@swatch4:              #0d171a;
+@swatch4:              #1e353c;
 @swatch5:              #dee8e3;
 
 @effectSuccess:        #ccffdb;
