--- a/css/agiletoolkit-custom.less
+++ b/css/agiletoolkit-custom.less
@@ -31,31 +31,48 @@
 #atk-content {
 	padding: @margin*2;
 }
-body.page-index {
-	background: #000 url(../temp/stars.jpg);
-	-webkit-background-size: cover;
-	background-size: cover;
-	color: #fff;
-	a {
-		color: @swatch2;
-	}
-	#atk-header, #atk-content, #atk-footer {
-		background: none;
-		border: none;
-	}
-	#atk-header {
-		background: none;
-	}
-	#atk-content {
-		padding-top: @margin;
-		.hero {
-			border: 1px solid fade(#fff, 15%);
-			border-width: 1px 0;
-			margin-bottom: @margin*2;
-			padding: @margin*2 0;
+#atk-footer {
+	padding: @margin @margin*2;
+}
+body{
+	&.page-index {
+		background: #000 url(../temp/stars.jpg);
+		-webkit-background-size: cover;
+		background-size: cover;
+		color: #fff;
+		a {
+			color: @swatch2;
+		}
+		#atk-header, #atk-content, #atk-footer {
+			background: none;
+			border: none;
+		}
+		#atk-header {
+			background: none;
+		}
+		#atk-content {
+			padding-top: @margin;
+			.hero {
+				border: 1px solid fade(#fff, 15%);
+				border-width: 1px 0;
+				margin-bottom: @margin*2;
+				padding: @margin*2 0;
+			}
+		}
+		#atk-footer {
+			color: fade(#fff, 20%);
 		}
 	}
-	#atk-footer {
-		color: fade(#fff, 20%);
+	&.page-team {
+		.team-block {
+			.atk-media {
+				.clear-font;
+				width: 207px;
+				a {
+					display: inline-block;
+					margin: 2px;
+				}
+			}
+		}
 	}
 }
