--- a/less/typography.less
+++ b/less/typography.less
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: @bodySize * 3.177;
 }
 h1 {
-    margin-bottom: @margin*1.5;
+    margin-bottom: @margin;
 }
 h1, .atk-size-peta {
     font-size: @bodySize * 2.618;
