--- a/css/agiletoolkit-custom.less
+++ b/css/agiletoolkit-custom.less
@@ -75,4 +75,13 @@ body{
 			}
 		}
 	}
+	&.page-portfolio {
+		.project {
+			width: 25%;
+			.thumbnail {
+				.clear-font;
+				margin-bottom: @margin/2;
+			}
+		}
+	}
 }
