Recoved old theme.

--- a/less/typography.less
+++ b/less/typography.less
@@ -12,6 +12,11 @@ body {
     font-size: @bodySize;
 }
 
+*, body, button, input, textarea, select {
+    -webkit-font-smoothing: antialiased;
+    text-rendering: optimizeLegibility;
+}
+
 
 // ==========================================================
 // Text Size Chart (Inspired by Typeplate.com)
