--- a/less/typography.less
+++ b/less/typography.less
@@ -104,7 +104,7 @@ ul, ol {
 
 
 // ==========================================================
-// Other elements
+// Other elements (Needs tobe reviewed)
 // ==========================================================
 
 p {
