--- a/less/variables.less
+++ b/less/variables.less
@@ -1,4 +1,17 @@
+// ==========================================================
+// General
+// ==========================================================
+
+@bodyBackground:       #fff;
+@margin:               1rem * @bodyBaseline;
+@cornerRadius:         5px;
+@siteWidth:            100%;
+
+
+// ==========================================================
 // Typography
+// ==========================================================
+
 @bodyFamily:           "Helvetica Neue", "Helvetica", @jui-ffDefault;
 @bodyColor:            #000;
 @bodySize:             0.875rem; /* 14px */
@@ -9,12 +22,10 @@
 @headingWeight: 	   400;
 
 
-// General
-@margin: 1rem * @bodyBaseline;
-@siteWidth: 100%;
-
-
+// ==========================================================
 // Colors
+// ==========================================================
+
 @linkColor:            blue;
 @linkColorHover:       red;
 
@@ -22,11 +33,11 @@
 @borderClickable:      #c1c1c1;
 @borderOverlay:        darken(@borderStatic, 25%);
 
-@colorPrimary:         #3498db;
 @stateDefault:         #fff;
 @stateHover:           #f5f5f5;
 @stateActive:          #eee;
 
+@colorFocus:           blue;
 @colorLight:           #fff;
 @colorDark:            #000;
 
@@ -42,71 +53,8 @@
 @effectInfo:           #cceeff;
 
 
+// ==========================================================
+// Import
+// ==========================================================
+
 @import                "jui-variables.less";
-
-
-// ========================================================
-//   ATK settings / variables
-// ========================================================
-//   Documentation: http://agiletoolkit.org/doc/css
-// 
-// Settings can be inherited from JUI theme (jui-variables.less file).
-// ========================================================
-
-@gridColumns:       12;         // Column count
-@gridColumnWidth:   6%;         // Column width
-@gridGutterWidth:   2.5%;       // Gutter width
-// @margin:            2em;        // Global margin
-@padding:           2em;        // Global padding
-@label:             7rem;        // Label width for form/dl
-@labelMargin:       2rem;        // Label margin
-@dialogMargin:      120px;      // Dialog top margin
-@link:              #0053b3;    // Link color
-@shadowColor:       #000000;    // Global shadow color (used in dialogs, dropmenus, etc.) TODO: probably this should be related with @jui-bgColorShadow;
-@thborder:          #002d5e;    // Table header border color
-@border:            #e5e5e5;    // Global border color (used in tables, hr, forms, etc.)
-@even:              #f0f5fa;    // Color for even row
-@inputBorder:       #cccccc;    // Input Border
-@focused:           #00aaff;    // Color on input focus
-@error:             #e51717;    // Error color
-@lightGray:         lighten(@black,60%);    // Used for comments
-@lightestGray:      lighten(@black,90%);    // Used for background of readonly fields
-// @cornerRadius:      @jui-cornerRadius;      // Global corner radius
-@cornerRadius: 3px;
-
-// Typography
-// ----------
-@fontFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault; // Global font family
-@fontColor:         lighten(@black,10%);    // Global font color
-@lineHeight: 24px;
-
-// Helpers
-// -------
-@white:             #ffffff;    // White color
-@black:             #000000;    // Black color
-
-// Sticky footer
-// -------------
-@footerSticky:      true;       // Footer sticked to the bottom of the page
-@footerHeight:      3em;        // Footer height needs to be specific if sticky footer is applied
-
-// Gradient colors - these should somehow be calculated from @jui-... variables of JUI theme by default
-// ---------------
-// For example:
-// @headerBgGradientTop:    #gradient > .getMaxColor(@jui-bgColorHeader);
-// @headerBgGradientBottom: #gradient > .getMinColor(@jui-bgColorHeader);
-// These can also be calculated for example like this, because LESS knows how to calculate colors:
-// @headerBgGradientTop:    @jui-bgColorHeader + #101010;
-// @headerBgGradientBottom: @jui-bgColorHeader - #101010;
-
-@defaultBgGradientTop:      #f0f3f5;
-@defaultBgGradientBottom:   #dce2e5;
-
-@hoverBgGradientTop:        #ffffff;
-@hoverBgGradientBottom:     #dce2e5;
-
-@activeBgGradientTop:       #f0f3f5;
-@activeBgGradientBottom:    #ffffff;
-
-@headerBgGradientTop:       #282e33;
-@headerBgGradientBottom:    #282e33;
