--- a/less/variables.less
+++ b/less/variables.less
@@ -15,7 +15,7 @@
 @bodyFamily:           "Helvetica Neue", "Helvetica", @jui-ffDefault;
 @bodyColor:            #000;
 @bodySize:             0.875rem; /* 14px */
-@bodyBaseline:         1.618; /* 24px */
+@bodyBaseline:         1.667; // Major Sixth
 
 @headingColor:         #000;
 @headingFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault;
@@ -37,9 +37,9 @@
 @stateHover:           #f5f5f5;
 @stateActive:          #eee;
 
-@colorFocus:           blue;
-@colorLight:           #fff;
-@colorDark:            #000;
+@colorFocus:           blue; // (!)
+@colorLight:           #fff; // (!)
+@colorDark:            #000; // (!)
 
 @swatch1:              rgb(90, 198, 255);
 @swatch2:              rgb(255, 130, 130);
@@ -58,3 +58,6 @@
 // ==========================================================
 
 @import                "jui-variables.less";
+
+
+// (!) — Need to check if it can be simplified.
