--- a/less/variables.less
+++ b/less/variables.less
@@ -41,11 +41,11 @@
 @colorLight:           #fff; // (!)
 @colorDark:            #000; // (!)
 
-@swatch1:              rgb(90, 198, 255);
-@swatch2:              rgb(255, 130, 130);
-@swatch3:              rgb(160, 236, 111);
-@swatch4:              rgb(253, 235, 117);
-@swatch5:              rgb(241, 241, 242);
+@atk-swatch-blue:	   rgb(90, 198, 255);			.createSwatch(atk-swatch-blue);
+@atk-swatch-red:       rgb(255, 130, 130);			.createSwatch(atk-swatch-red);
+@atk-swatch-green:     rgb(160, 236, 111);			.createSwatch(atk-swatch-green);
+@atk-swatch-yellow:    rgb(253, 235, 117);			.createSwatch(atk-swatch-yellow);
+@atk-swatch-gray:      rgb(241, 241, 242);			.createSwatch(atk-swatch-gray);
 
 @effectSuccess:        #ccffdb;
 @effectWarning:        #fcffcc;
