--- a/less/typography.less
+++ b/less/typography.less
@@ -28,7 +28,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: @headingWeight;
     line-height: 1.2;
     text-rendering: optimizeLegibility; /*  voodoo to enable ligatures and kerning | https://developer.mozilla.org/en-US/docs/CSS/text-rendering */
-    margin: @margin*1.5 0 @margin/2 0;
+    margin: @margin*1 0 @margin/2 0;
     &:first-child {
         margin-top: 0;
     }
@@ -41,6 +41,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 .atk-size-exa {
     font-size: @bodySize * 4.632;
+}
+h1 {
+    line-height: 1.1;
 }
 h1, .atk-size-peta {
     font-size: @bodySize * 3.474;
