--- a/less/typography.less
+++ b/less/typography.less
@@ -263,7 +263,7 @@ hr {
     width: 100%;
     height: 1px;
     clear: both;
-    &.small {
+    &.atk-hr-small {
         margin: @margin/2 0;
     }
 }
