--- a/less/variables.less
+++ b/less/variables.less
@@ -14,12 +14,13 @@
 
 @bodyFamily:           "Helvetica Neue", "Helvetica", @jui-ffDefault;
 @bodyColor:            #000;
-@bodySize:             0.875rem; /* 14px */
+@bodySize:             0.875rem; // 14 px
 @bodyBaseline:         1.667; // Major Sixth
 
 @headingColor:         #000;
 @headingFamily:        "Helvetica Neue", "Helvetica", @jui-ffDefault;
-@headingWeight: 	   400;
+@headingWeight:		   400;
+@headingBaseline:	   1.2; // Minor Third
 
 
 // ==========================================================
