--- a/less/misc.less
+++ b/less/misc.less
@@ -15,6 +15,10 @@
   }
 }
 
+body {
+    background: @bodyBackground;
+}
+
 
 // ==========================================================
 // Components
@@ -111,6 +115,9 @@ input[type=submit] {
             margin-top: 0;
         }
     }
+    &:last-child {
+        margin-bottom: 0;
+    }
 }
 .atk-section {
     padding: @margin*2 0;
@@ -205,7 +212,7 @@ input[type=submit] {
         border: none;
         box-shadow: 0 0 100px rgba(0,0,0,0.25);
         .ui-dialog-titlebar.ui-widget-header {
-            .atk-size-kilo;
+            .atk-size-mega;
             background: #fff;
             border: none;
             border-radius: 0;
@@ -256,7 +263,7 @@ input[type=submit] {
             }
         }
         .ui-dialog-buttonpane {
-            border-color: black;
+            border-color: @borderClickable;
             margin: 0;
             padding: 0;
             .ui-dialog-buttonset {
@@ -280,7 +287,7 @@ input[type=submit] {
                         background: lighten(gray,3%);
                     }
                     + .ui-button {
-                        border-left: 1px solid black;
+                        border-left: 1px solid @borderClickable;
                     }
                 }
             }
