--- a/less/mixins.less
+++ b/less/mixins.less
@@ -284,6 +284,13 @@
 // Backgrounds
 // ==========================================================
 
+.background-cover(@src) {
+      background-attachment:fixed;
+      background-image: url(@src);
+      background-position: center center;
+      background-repeat: no-repeat;
+      background-size: cover;
+}
 .base64DataUriBackground (@encode, @type: ~"image/svg+xml") {
     @dataUriPrefix: ~"url(data:@{type};base64,";
     @dataUriSuffix: ~")";
